--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <br />
       <ul>
         <li>
-          <a href="">
+          <a href="techfoo.html">
             <div class="button">
               <span class="button__mask"></span>
               <span class="button__text">Eat -> Sleep -> Code -> Repeat</span>
