--- a/index.html
+++ b/index.html
@@ -1,67 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>DSC NITA</title>
-    <!-- mobile responsive meta -->
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, maximum-scale=5"
-    />
-    <meta name="description" content="DSC NITA Hiring Challenge" />
-    <meta name="author" content="DSC NITA" />
-    <link rel="shortcut icon" href="assets/favicon.ico" />
-    <link rel="apple-touch-icon" href="assets/apple.png" />
 
-    <!-- Stylesheets -->
-    <link rel="stylesheet" href="./assets/css/style.css" />
-    <link rel="stylesheet" href="./assets/css/btn.css" />
-  </head>
-  <body>
-    <div class="childClass logo"><img src="./assets/logo.png" /></div>
-    <div class="container" style="margin-top: 15vh; margin-top: 15%">
-      <div style="font-size: larger; margin-left: 20%; margin-right: 20%">
-        <h1>Hey folks, DSC NITA is back again!!</h1>
-        We have various vacancies in our team. <strong>Wanna join us?</strong
-        ><br /><br />
-        Which domain would you like to join? Tech or Non-Tech. Non-Tech includes
-        media and design, content and, outreach teams. While Tech includes teams
-        related to various tech domains like Mobile Development, Web
-        Development, ML & AI, etc.<br />
-      </div>
-      <br />
-      <ul>
-        <li>
-          <a href="techfoo.html">
-            <div class="button">
-              <span class="button__mask"></span>
-              <span class="button__text">Eat -> Sleep -> Code -> Repeat</span>
-              <span class="button__text button__text--bis"
-                >Eat -> Sleep -> Code -> Repeat</span
-              >
-            </div>
-          </a>
-        </li>
-        <li>
-          <a href="https://forms.gle/Rc2XB6zxwvETABRy7">
-            <div class="button">
-              <span class="button__mask"></span>
-              <span class="button__text"
-                >Creating content or graphics or reaching out to people is a
-                piece of cake</span
-              >
-              <span class="button__text button__text--bis"
-                >Creating content or graphics or reaching out to people is a
-                piece of cake</span
-              >
-            </div>
-          </a>
-        </li>
-      </ul>
-      <!-- <div style="font-size: xx-large; font-weight: bold;">
+<head>
+  <meta charset="utf-8" />
+  <title>DSC NITA</title>
+  <!-- mobile responsive meta -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5" />
+  <meta name="description" content="DSC NITA Hiring Challenge" />
+  <meta name="author" content="DSC NITA" />
+  <link rel="shortcut icon" href="assets/favicon.ico" />
+  <link rel="apple-touch-icon" href="assets/apple.png" />
+
+  <!-- Stylesheets -->
+  <link rel="stylesheet" href="./assets/css/style.css" />
+  <link rel="stylesheet" href="./assets/css/btn.css" />
+</head>
+
+<body>
+  <div class="childClass logo"><img src="./assets/logo.png" /></div>
+  <div class="container" style="margin-top: 15vh; margin-top: 15%">
+    <div style="font-size: larger; margin-left: 20%; margin-right: 20%">
+      <h1>Hey folks, DSC NITA is back again!!</h1>
+      We have various vacancies in our team. <strong>Wanna join us?</strong><br /><br />
+      Which domain would you like to join? Tech or Non-Tech. Non-Tech includes
+      media and design, content and, outreach teams. While Tech includes teams
+      related to various tech domains like Mobile Development, Web
+      Development, ML & AI, etc.<br />
+    </div>
+    <br />
+    <ul>
+      <li>
+        <a href="techfoo.html">
+          <div class="button">
+            <span class="button__mask"></span>
+            <span class="button__text">Eat -> Sleep -> Code -> Repeat</span>
+            <span class="button__text button__text--bis">Eat -> Sleep -> Code -> Repeat</span>
+          </div>
+        </a>
+      </li>
+      <li>
+        <a href="https://forms.gle/teDYiBRVEkiZ4EYA7">
+          <div class="button">
+            <span class="button__mask"></span>
+            <span class="button__text">Creating content or graphics or reaching out to people is a
+              piece of cake</span>
+            <span class="button__text button__text--bis">Creating content or graphics or reaching out to people is a
+              piece of cake</span>
+          </div>
+        </a>
+      </li>
+    </ul>
+    <!-- <div style="font-size: xx-large; font-weight: bold;">
         Adios amigos my friends. Thanks for helping me.<br />
         I have found Mr. White and we are onto our new journey.
       </div> -->
-    </div>
-  </body>
+  </div>
+</body>
+
 </html>
